# Decades

./: 404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: codeql.yml  docs.yml  pypi.yml
decades/: main.py
docs/: index.md
search/: search_index.json
