[tool.poetry]
name = "decades"
version = "0.1.0"
description = ""
authors = ["Adam Garza <168875175+hyerland@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
decades = "decades.main:app"


[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.12.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
